Disable behavior <select> on black

--- a/src/window/index.html
+++ b/src/window/index.html
@@ -41,7 +41,7 @@
             <div id="config-window">
                 <h1></h1>
                 <span>Color: </span>
-                <select id="color">
+                <select id="color" onchange="validateBehavior(this.value)">
                     <option value="0">Black</option>
                     <option value="1">Dimmed white</option>
                     <option value="3">White</option>
