Improved animations and more

--- a/src/window/index.html
+++ b/src/window/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h2>AKAI</h2><h2 id="name">APCmini</h2>
+        <h2>AKAI</h2><h2 id="name">APC<span>mini</span></h2>
         <table>
             <tr>
                 <td><div id="button56"></div></td><td><div id="button57"></div></td><td><div id="button58"></div></td><td><div id="button59"></div></td><td><div id="button60"></div></td><td><div id="button61"></div></td><td><div id="button62"></div></td><td><div id="button63"></div></td><td><div id="minibutton112"></div></td>
